package com.pablozoani.zoop.z_trash.models.artist;

public enum LiteraryGenre {DRAMA, POETRY, FICTION, NONFICTION}
