package com.pablozoani.zoop.z_trash.models.artist;

public class Painter extends Artist<Picture> {

    public Painter(String completeName) {
        super(completeName);
    }
}
