package com.pablozoani.zoop.z_trash.models.artist;

/**
 * Marker Interface for Performable Works.
 */
public interface Performable {
}
