package com.pablozoani.zoop.z_trash.models.artist;

public class Sculptor extends Artist<Sculpture> {

    public Sculptor(String completeName) {
        super(completeName);
    }
}
